fix 記述ミス修正